--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
           <link rel="stylesheet" type="text/css" href="/vendors/css/038 Grid.css">
           <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
           <link rel="stylesheet" type="text/css" href="./resources/css/style.css"> 
-          <title>MY BLOG PAGE</title>
+          <title>ANSHI BLOG</title>
     </head>
 
     <body>
