--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </li>
                     <li>
                         <figure class="imagefig">
-                            <a href="https://findgituser-a2.netlify.com">
+                            <a href="https://github-finder-a2.netlify.app">
                                 <img src="./resources/images/githubfinder.jpg">
                             </a>
                         </figure>
