github link change

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <li><a href="https://www.instagram.com/anshi.aggarwal.35/" class="social"><img src="/resources/images/insta.jpg" alt="insta" class="insta media"></a></li>
                         <li><a href="https://www.facebook.com/anshi.aggarwal.35" class="social"><img src="/resources/images/fb.png" alt="facebook" class="facebook media"></a></li>
                         <li><a href="#" class="social"><img src="/resources/images/whats.jpg" alt="whatsapp" class="whatsapp media"></a></li>
-                        <li><a href="https://github.com/AnshiAggarwal" class="social"><img src="/resources/images/git.png" alt="github" class="github media"></a></li>
+                        <li><a href="https://github.com/Anshi-a2" class="social"><img src="/resources/images/git.png" alt="github" class="github media"></a></li>
                      </ul>
                      
                     </div>
