image format changed

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <li>
                         <figure class="imagefig">
                             <a href="https://infobook-a2.herokuapp.com/">
-                             <img src="./resources/images/infobook.png">
+                             <img src="./resources/images/infobook.jpg">
                             </a>
                         </figure>
                     </li>
